fix: org-chart filter dropdown-menu alignment (#128)
fix: org-chart filter dropdown-menu alignment

--- a/src/scss/filejet-scss/org-chart/_org-chart.scss
+++ b/src/scss/filejet-scss/org-chart/_org-chart.scss
@@ -52,16 +52,34 @@
         top: -80px !important;
         left: 0 !important;
         div[data-filter-menu="Select_Entity"]{
-            left: 21.2%;
+            left: 21.4%;
+            @media (min-width:1440px) {
+                left: 21.2%;
+            }
+            @media (min-width:1920px) {
+                left: 21%;
+            }
         }
         div[data-filter-menu="Compliance"]{
-            left: 41.3%;
+            left: 41.5%;
+            @media (min-width:1440px) {
+                left: 41.3%;
+            }
+            @media (min-width:1920px) {
+                left: 41.09%;
+            }
         }
         div[data-filter-menu="Jurisdiction"]{
-            right: 21.23%;
+            right: 21.40%;
+            @media (min-width:1920px) {
+                right: 21%;
+            }
         }
         div[data-filter-menu="Status"]{
-            right: 1%;
+            right: 1.3%;
+            @media (min-width:1920px) {
+                right: 0.9%;
+            }
         }
             &>div {
                 div[data-filter-close]{
@@ -84,7 +102,10 @@
             }
         .boc-filter-menu{
                 top: 48px;
-                width: 19%;
+                width: 18.8%;
+                @media (min-width:1920px) {
+                    width: 19.19%;
+                }
                 @extend .p-0,.shadow,.rounded-0,.position-absolute,.bg-transparent;
                 fieldset{
                     @extend .p-0;
